--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 /*.iml
 /.nrepl-port
 /.idea
+.clj-kondo/.cache
+.clj-kondo/cache.clj-kondo
+/.lsp
+
+src/main/free_retro_two/firebase/firebase_config.cljs
