--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "devDependencies": {
     "shadow-cljs": "^2.26.2"
+  },
+  "dependencies": {
+    "firebase": "^10.13.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "volta": {
+    "node": "20.17.0",
+    "yarn": "1.22.22"
   }
 }
